--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
         <title>Rock Paper Sciccors</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        
+        <script src="script.js" defer></script>
+        <script src="https://kit.fontawesome.com/b555281fe8.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <script src="script.js"></script>
+        <div class="header">
+            <h1>Rock paper sciccors</h1>
+        </div>
+        <div class="box">
+        <div class="buttons">
+            <button class="rock" type="button">
+                <i class="far fa-hand-rock"></i>
+            </button>
+            <button class="paper" type="button">
+                <i class="far fa-hand-paper"></i>
+            </button>
+            <button class="sciccors" type="button">
+                <i class="far fa-hand-scissors"></i>
+            </button>
+        </div>
+    </div>
+        <div class="box">
+        <div class="info">
+            <button class="pc" type="button" disabled>
+                <i class="fas fa-hand-middle-finger"></i>
+            </button>
+            <p class="score">score</p>
+            <p class="moreinfo">info board</p>
+        </div>
+    </div>
+<div class="footer">
+    <p class="score">JC Mouton</p>
+</div>
 
     </body>
 </html>
