--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         </div>
         <div class="box">
         <div class="buttons">
-            <button class="rock" type="button">
+            <button class="game" type="button" id="rock">
                 <i class="far fa-hand-rock"></i>
             </button>
-            <button class="paper" type="button">
+            <button class="game" type="button"id="paper">
                 <i class="far fa-hand-paper"></i>
             </button>
-            <button class="sciccors" type="button">
+            <button class="game" type="button"id="sciccors">
                 <i class="far fa-hand-scissors"></i>
             </button>
         </div>
@@ -29,8 +29,14 @@
             <button class="pc" type="button" disabled>
                 <i class="fas fa-hand-middle-finger"></i>
             </button>
-            <p class="score">score</p>
-            <p class="moreinfo">info board</p>
+            <div class="bottom">
+            <p class="score">Your score: 0 | Computer score: 0 | Round: 0 </p>
+            <p class="moreinfo">Lets go bitch</p>
+            <button class="restart" type="button">Restart</button>
+        </div>
+        <div class="log">
+
+        </div>
         </div>
     </div>
 <div class="footer">
