--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
-        <script src="https://kit.fontawesome.com/b555281fe8.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/b555281fe8.js" crossorigin="anonymous"> defer</script>
     </head>
     <body>
         <div class="header">
             <h1>Rock paper sciccors</h1>
         </div>
         <div class="box">
+            <h3 >Choose your move</h3>
         <div class="buttons">
             <button class="game" type="button" id="rock">
                 <i class="far fa-hand-rock"></i>
@@ -25,13 +26,15 @@
         </div>
     </div>
         <div class="box">
+            <h3 class="move">Computer's move</h3>
         <div class="info">
-            <button class="pc" type="button" disabled>
+            <button class="pc" type="button" >
                 <i class="fas fa-hand-middle-finger"></i>
             </button>
             <div class="bottom">
-            <p class="score">Your score: 0 | Computer score: 0 | Round: 0 </p>
-            <p class="moreinfo">Lets go bitch</p>
+            <p class="score">Your score: 0 | Computer score: 0</p>
+            <p class="round">Round: 0 </p>
+            <p class="moreinfo">Lets go pussy!</p>
             <button class="restart" type="button">Restart</button>
         </div>
         <div class="log">
@@ -40,7 +43,7 @@
         </div>
     </div>
 <div class="footer">
-    <p class="score">JC Mouton</p>
+    <p class="score">yirre</p>
 </div>
 
     </body>
