--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
             </button>
         </div>
     </div>
-        <div class="box">
+        <div class="box two">
             <h3 class="move">Computer's move</h3>
         <div class="info">
             <button class="pc" type="button" >
                 <i class="fas fa-hand-middle-finger"></i>
             </button>
             <div class="bottom">
-            <p class="score">Your score: 0 | Computer score: 0</p>
+            <p class="score">Your score: 0</p>
+            <p class="scorepc">Computer score: 0</p>
             <p class="round">Round: 0 </p>
             <p class="moreinfo">Lets go pussy!</p>
             <button class="restart" type="button">Restart</button>
